--- a/src/style/core/main.scss
+++ b/src/style/core/main.scss
@@ -26,6 +26,7 @@
     font-size: 12px;
     display: none;
     vertical-align: middle;
+    padding-left: 5px;
     &.show {
       display: inline-block;
     }
@@ -36,6 +37,8 @@
   background-size: cover;
   width:32px;
   height:32px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .icons8-whatsapp {
